@@ -1,3 +1,7 @@
+Changelog 0.3.44 [20230308]:
+- cleanup html tags in description
+- fixed next page in recommendations
+
 Changelog 0.3.43 [20230308]:
 - Added Context Menu "Find Recommendations"
 - Added Context Menu "Find Relations"
